# paint

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: backend.cpp  backend.hpp  gui.cpp  gui.hpp  gui_resource.cpp  gui_resource.hpp  main.c  main.cpp  state.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
